--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -3,19 +3,6 @@ Metadata:
   Generator: "former2"
 Description: ""
 Resources:
-  IAMRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      Path: "/service-role/"
-      RoleName: "AWSGlueServiceRole-deglue"
-      AssumeRolePolicyDocument: !Sub "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"glue.amazonaws.com\"},\"Action\":\"sts:AssumeRole\",\"Condition\":{\"StringEquals\":{\"aws:SourceAccount\":\"${AWS::AccountId}\"}}},{\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"glue.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
-      MaxSessionDuration: 3600
-      ManagedPolicyArns:
-      - !Sub "arn:aws:iam::${AWS::AccountId}:policy/service-role/AWSGlueServiceRole-deglue-EZCRC-s3Policy"
-      - "arn:aws:iam::aws:policy/service-role/AWSGlueServiceRole"
-      - "arn:aws:iam::aws:policy/AWSGlueConsoleFullAccess"
-      - "arn:aws:iam::aws:policy/service-role/AWSGlueServiceNotebookRole"
-
   S3Bucket:
     Type: "AWS::S3::Bucket"
     Properties:
@@ -36,26 +23,6 @@ Resources:
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
 
-  S3Bucket2:
-    Type: "AWS::S3::Bucket"
-    Properties:
-      BucketName: !Sub "aws-glue-assets-${AWS::AccountId}-${AWS::Region}"
-      BucketEncryption:
-        ServerSideEncryptionConfiguration:
-        -
-          ServerSideEncryptionByDefault:
-            SSEAlgorithm: "AES256"
-          BucketKeyEnabled: false
-      OwnershipControls:
-        Rules:
-        -
-          ObjectOwnership: "BucketOwnerEnforced"
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
-
   GlueJob:
     Type: "AWS::Glue::Job"
     Properties:
@@ -66,18 +33,18 @@ Resources:
         MaxConcurrentRuns: 1
       Command:
         Name: "glueetl"
-        ScriptLocation: !Sub "s3://${S3Bucket2}/scripts/deglue-job.py"
+        ScriptLocation: !Sub "s3://aws-glue-assets-${AWS::AccountId}-${AWS::Region}/scripts/deglue-job.py"
         PythonVersion: "3"
       DefaultArguments:
         --enable-metrics: "true"
         --enable-spark-ui: "true"
-        --spark-event-logs-path: !Sub "s3://${S3Bucket2}/sparkHistoryLogs/"
+        --spark-event-logs-path: !Sub "s3://aws-glue-assets-${AWS::AccountId}-${AWS::Region}/sparkHistoryLogs/"
         --enable-job-insights: "false"
         --enable-observability-metrics: "true"
         --enable-glue-datacatalog: "true"
         --job-bookmark-option: "job-bookmark-disable"
         --job-language: "python"
-        --TempDir: !Sub "s3://${S3Bucket2}/temporary/"
+        --TempDir: !Sub "s3://aws-glue-assets-${AWS::AccountId}-${AWS::Region}/temporary/"
         --enable-auto-scaling: "true"
       MaxRetries: 0
       AllocatedCapacity: 2
@@ -86,4 +53,45 @@ Resources:
       MaxCapacity: 2
       NumberOfWorkers: 2
       WorkerType: "G.1X"
+
+  IAMRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      Path: "/service-role/"
+      RoleName: "AWSGlueServiceRole-deglue"
+      AssumeRolePolicyDocument: !Sub "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"glue.amazonaws.com\"},\"Action\":\"sts:AssumeRole\",\"Condition\":{\"StringEquals\":{\"aws:SourceAccount\":\"${AWS::AccountId}\"}}},{\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"glue.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
+      MaxSessionDuration: 3600
+      ManagedPolicyArns:
+      - !Ref IAMManagedPolicy
+      - "arn:aws:iam::aws:policy/service-role/AWSGlueServiceRole"
+      - "arn:aws:iam::aws:policy/AWSGlueConsoleFullAccess"
+      - "arn:aws:iam::aws:policy/service-role/AWSGlueServiceNotebookRole"
+
+  IAMManagedPolicy:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      ManagedPolicyName: "AWSGlueServiceRole-deglue-EZCRC-s3Policy"
+      Path: "/service-role/"
+      PolicyDocument: !Sub |
+          {
+          	"Version": "2012-10-17",
+          	"Statement": [
+          		{
+          			"Effect": "Allow",
+          			"Action": [
+          				"s3:GetObject",
+          				"s3:PutObject",
+          				"s3:DeleteObject"
+          			],
+          			"Resource": [
+          				"arn:aws:s3:::${S3Bucket}/*"
+          			],
+          			"Condition": {
+          				"StringEquals": {
+          					"aws:ResourceAccount": "${AWS::AccountId}"
+          				}
+          			}
+          		}
+          	]
+          }
 
